# lib-python-messaging

./: CHANGELOG.md  README.md  pyproject.toml
docs/: message-types.md
src/pattern_agentic_messaging/: __init__.py  a2a.py  app.py  audit.py  auth.py  base_app.py  config.py  message_types.py  messages.py  pool.py  session.py  session_token.py  types.py  utils.py
src/pattern_agentic_messaging/nats/: __init__.py  app.py  config.py  session.py
src/pattern_agentic_messaging/slim/: __init__.py  app.py  session.py
tests/: test_config.py  test_messages.py
