[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattern_agentic_messaging"
version = "1.1.0"
description = "SLIM and NATS powered messaging"
authors = [
  { name="Amos Joshua", email="amos@patternagentic.ai" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "slim-bindings>=0.7.0,<0.8.0"
]

[project.optional-dependencies]
nats = ["nats-py>=2.6.0,<3.0.0"]


[tool.hatch.build.targets.wheel]
packages = ["src/pattern_agentic_messaging"]

[dependency-groups]
dev = [
    "pydantic>=2.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

